Fix images on safari

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -45,14 +45,9 @@
   .ksi-profile,
   .all-over-the-place-cover {
     transform: rotateZ(-3deg);
-
-    picture {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-    }
+    position: absolute;
+    width: 100%;
+    height: 100%;
 
     img {
       width: 100%;
@@ -66,6 +61,19 @@
 
     @include mq(1400px) {
       display: block;
+      grid-column: 1 / 2;
+
+      img {
+        object-position: top;
+      }
+    }
+  }
+
+  .all-over-the-place-cover {
+    grid-column: 2;
+
+    img {
+      object-position: bottom;
     }
   }
 
